--- a/app/src/main/res/layout/view_details_fragment.xml
+++ b/app/src/main/res/layout/view_details_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ViewDetailsFragment">
+    tools:context=".ui.fragments.ViewDetailsFragment">
 
     <TextView
         android:layout_width="match_parent"
