--- a/app/src/main/res/layout/view_details_fragment.xml
+++ b/app/src/main/res/layout/view_details_fragment.xml
@@ -30,8 +30,7 @@
                 android:fitsSystemWindows="true"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
-                app:layout_collapseMode="parallax"
-                />
+                app:layout_collapseMode="parallax" />
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
