--- a/app/src/main/res/layout/view_item_image.xml
+++ b/app/src/main/res/layout/view_item_image.xml
@@ -16,4 +16,10 @@
         android:layout_height="50dp"
         style="?android:attr/progressBarStyle"
         android:layout_gravity="center" />
+    <com.devapp.nasawallpaper.ui.customview.RateBlock
+        android:id="@+id/rate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        />
 </FrameLayout>
