added rotation animation

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,11 +12,11 @@
     <com.devapp.nasawallpaper.ui.customview.LoaderIndicatorView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        app:loader_circleRadius="24dp"
+        app:loader_circleRadius="14dp"
         app:loader_circleSpacing="10dp"
-        app:loader_color_1="@color/colorPrimary"
-        app:loader_color_2="@color/colorAccent"
-        app:loader_color_3="@color/colorPrimaryDark"
+        app:loader_color_1="@color/colorPointOne"
+        app:loader_color_2="@color/colorPointTwo"
+        app:loader_color_3="@color/colorPointTree"
         android:id="@+id/loader"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
