--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,20 +9,6 @@
     <include
         layout="@layout/view_toolbar" />
 
-    <com.devapp.nasawallpaper.ui.customview.LoaderIndicatorView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        app:loader_circleRadius="14dp"
-        app:loader_circleSpacing="10dp"
-        app:loader_color_1="@color/colorPointOne"
-        app:loader_color_2="@color/colorPointTwo"
-        app:loader_color_3="@color/colorPointTree"
-        android:id="@+id/loader"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        />
-
     <com.devapp.nasawallpaper.ui.screens.main.customview.imageList.ImageList
         android:id="@+id/imagesList"
         android:layout_width="match_parent"
@@ -30,7 +16,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loader" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+    <com.devapp.nasawallpaper.ui.customviews.LoaderIndicatorView
+        android:id="@+id/loader"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:loader_circleRadius="14dp"
+        app:loader_circleSpacing="10dp"
+        app:loader_color_1="@color/colorPointOne"
+        app:loader_color_2="@color/colorPointTwo"
+        app:loader_color_3="@color/colorPointTree"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        />
 
     <TextView
         android:id="@+id/emptyListInfo"
