--- a/app/src/main/res/layout/fragment_view_details.xml
+++ b/app/src/main/res/layout/fragment_view_details.xml
@@ -55,6 +55,7 @@
     </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/shareButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
