added tests dependency

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,5 +5,5 @@
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_settings"
         app:showAsAction="always"
-        android:title="Settings" />
+        android:title="@string/settings" />
 </menu>
